-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 1.3.83 (2.0.0-beta)
-
None
-
c745155191fac756f13b92fbd0b33a458dd67b4d
When doing a Alt+G,Alt+D a proper read-only editor opens with the temporary diff. But when opening a diff or patch file, the editor is halfway read-only. You can edit the contents but you can't save it and the read-only icon is displayed.
The expected behavior when opening a diff/patch file would be a fully editable/writable file.
- resulted from
-
QTCREATORBUG-1434 Read only prf file
-
- Closed
-