src/plugins/cvs/cvsplugin.cpp
@@ -1075,6 +1075,7 @@ Core::IEditor * CVSPlugin::showOutputInEditor(const QString& title, const QStrin
         return 0;
     s.replace(QLatin1Char(' '), QLatin1Char('_'));
     e->setSuggestedFileName(s);
+    e->setForceReadOnly(true);
     if (!source.isEmpty())
         e->setSource(source);
     if (codec)
