src/plugins/git/gitclient.cpp
@@ -195,6 +195,7 @@ VCSBase::VCSBaseEditor
             rc->setCodec(VCSBase::VCSBaseEditor::getCodec(source));
     }
     m_core->editorManager()->activateEditor(outputEditor);
+    rc->setForceReadOnly(true);
     return rc;
 }
 
