src/plugins/mercurial/mercurialclient.cpp
@@ -586,6 +586,7 @@ VCSBase::VCSBaseEditor *MercurialClient::createVCSEditor(const QString &kind, QS
     }
 
     core->editorManager()->activateEditor(outputEditor);
+    baseEditor->setForceReadOnly(true);
     return baseEditor;
 }
 
